hphp/hack/test/typecheck/defined/if_func_call_2.php.exp
File "if_func_call_2.php", line 11, characters 10-11:
The variable $x is defined (Naming[2007])
  File "if_func_call_2.php", line 9, characters 9-10:
  But in a different scope
File "if_func_call_2.php", line 11, characters 10-11:
Undefined variable: $x (Naming[2050])
